--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: go
-sudo: true
+sudo: required
 
 go:
   - 1.7
@@ -14,4 +14,4 @@ script:
   # Build Go Testserver
   - mkdir build
   - cd build
-  - go build TestServer/main.go TestServer/MTADebugAPI.go TestServer/MTAServer.go TestServer/MTAUnitAPI.go 
+  - go build ../TestServer/main.go ../TestServer/MTADebugAPI.go ../TestServer/MTAServer.go ../TestServer/MTAUnitAPI.go 
