--- a/VSCode_Extension/package.json
+++ b/VSCode_Extension/package.json
@@ -72,6 +72,7 @@
     "vscode-debugadapter-testsupport": "^1.18.0"
   },
   "dependencies": {
+    "ps-node": "^0.1.6",
     "request": "^2.81.0",
     "vscode-debugadapter": "^1.18.0",
     "vscode-debugprotocol": "^1.18.0"
